//
// Copyright 2017, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.users;

option (type_url_prefix) = "type.spine3.org";

option java_package = "org.spine3.users";
option java_multiple_files = true;
option java_outer_classname = "UserProfileProto";
option java_generate_equals_and_hash = true;

import "spine/annotations.proto";
import "spine/validate.proto";
import "spine/net/url.proto";
import "spine/net/email_address.proto";

// General profile information for a user.
//
// This message is used for displaying user information.
// Values of fields of this message are usually obtained from authentication providers.
//
message UserProfile {

    // A user profile must have at least one of these fields defined.
    option (required_field) = "display_name|email";

    // The user's display name, if available.
    string display_name = 1;

    // The email address corresponding to the user's account in the specified provider,
    // if available.
    net.EmailAddress email = 2;

    // The URL to the user's profile picture, if available.
    net.Url photo_url = 3;
}
